deploy/030-Deployment-input.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-input
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"doppelgaenger-input:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
  labels:
    app.kubernetes.io/name: doppelgaenger-input
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-input
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-input
    spec:
      enableServiceLinks: false
      containers:
        - name: app
          image: doppelgaenger-input
          imagePullPolicy: Always
