deploy/030-Deployment-websocket.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-websocket
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"doppelgaenger-websocket:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
  labels:
    app.kubernetes.io/name: doppelgaenger-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-websocket
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-websocket
    spec:
      enableServiceLinks: false
      containers:
        - name: app
          image: doppelgaenger-websocket
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: web
          livenessProbe:
            httpGet:
              port: 8082
              path: /health
          readinessProbe:
            httpGet:
              port: 8082
              path: /health
