deploy/060-Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dashboard
spec:
  to:
    kind: Service
    name: doppelgaenger-websocket
  port:
    targetPort: web
  tls:
    termination: edge
